	- If constant cursor position display is on when we finish, make
	  sure the cursor position is displayed properly. (DLR)
  allow_pending_sigwinch()
	- Simplify by using the "?" operator instead of an if clause.
	  (DLR)
  main()
	- When constant cursor position display is on, only display the
	  cursor position if there are no keys waiting in the buffer.
	  (DLR)
- search.c:
  do_replace()
	- Blank out last_replace properly again just before displaying
	  the "Replace" prompt. (DLR, found by Mike Frysinger)

GNU nano 1.3.8 - 2005.06.30
- General:
	- Miscellaneous comment fixes. (DLR)
	- Various #include fixes.  Since proto.h includes nano.h, only
	  include the former in source files.  Also add an #include
	  guard to proto.h, and make the config.h #include in nano.h
	  match the config.h #includes everywhere else. (DLR)
	- Change all hardcoded instances of 128 bytes to MAX_BUF_SIZE,
	  and #define MAX_BUF_SIZE as 128 in nano.h. (DLR)
	- Display the key to go to the previous strings in the
	  search/replace history as "^P" instead of "Up".  This makes
	  mouse clicks work properly on it.  Changes to shortcut_init(),
	  help_init(), nanogetstr(), and do_statusbar_input(). (DLR)
	- Update the Free Software Foundation's mailing address in
	  various comments. (DLR)
	- Add the ability to open a file on a specified column as well
	  as a specified line, by allowing an argument of the form
	  +LINE,COLUMN.  New function parse_line_column(); changes to
	  shortcut_init(), main(), do_gotoline() (renamed
	  do_gotolinecolumn()), do_gotoline_void() (renamed
	  do_gotolinecolumn_void()), nano.1, and nano.texi. (DLR,
	  suggested by PFTank)
	- Overhaul the history code to work more consistently, and clean
	  up various parts of it.  New function history_has_changed();
	  changes to load_history(), writehist(),
	  thanks_for_all_the_fish(), history_init(), find_node()
	  (renamed find_history()), update_history(),
	  get_history_older(), get_history_newer(),